pscprod1/base/articles-api/nginexproxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: articles-api-nginx
spec:
  selector: null
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
    spec:
      containers: null
status: {}
---
apiVersion: apps/v1
kind: Service
metadata:
  creationTimestamp: null
  name: articles-api-nginx
spec: {}
status:
  loadBalancer: {}
