pscprod1/base/articles-api/service.yaml
---
apiVersion: apps/v1
kind: Service
metadata:
  creationTimestamp: null
  name: articles-api
spec: {}
status:
  loadBalancer: {}
