pscprod1/base/articles-api/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  creationTimestamp: null
  name: articles-api-api.sharecare.com
spec: {}
status:
  loadBalancer: {}
